(lang dune 3.6)
(name randomize)
(version 1.0.1)
(generate_opam_files true)
(source (github sanette/randomize))
(maintainers "Vu Ngoc San <san.vu-ngoc@laposte.net>")
(authors "Vu Ngoc San <san.vu-ngoc@laposte.net>")
(license GPL-3.0-or-later)
(documentation https://github.com/sanette/randomize)

(package
 (name randomize)
 (synopsis "Need a random number?")
 (description "A demo app showing basic usage of the Bogue library.")
 (depends (bogue (>= 20260208)))
 (tags (bogue demo gui random)))
